--- a/El Trio Gravure/Contact/Contact.html
+++ b/El Trio Gravure/Contact/Contact.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Contact</title>
+        <link rel="icon" href="../Ressources/Logo%20avec%20fond%20en%20cercle.png" type="image/png">
+        <link rel="stylesheet" href="Contact.css">
+        <link rel="stylesheet" href="../normalize.css">
+    </head>
 
-</body>
+    <body>
+        <div class="all"></div>
+           <header>
+               <h1>Contact</h1>
+           </header>
+            <div class="inter">
+                <nav>
+                    <p><h3>Menu : </h3><br><br></p>
+                    <ul>
+                        <li> <a href="../Accueil/Accueil.html">Accueil</a></li>
+                        <br>
+                        <li><a href="../Nos%20Modèles/Nos%20Modèles.html">Nos Modèles</a></li>
+                        <br>
+                        <li> <a href="../Nos%20Projets/Nos%20Projets.html">Nos Projets</a></li>
+                        <br>
+                        <li> <a href="../La%20Creation/La%20Création.html">La Création</a></li>
+                        <br>
+                        <li> <a href="../Contact/Contact.html">Contact</a></li>
+                        <br>
+                    </ul>
+                </nav>
+
+               <main>
+                   <div class="Con0">
+                       <p><h2>Nous Contacter :</h2> <br></p>
+                   </div>
+
+                   <div class="Con1">
+                       <p>
+                           Un Projet, une idée... n'hésitez pas à nous contacter :
+                       </p>
+                   </div>
+
+                   <div class="space1">
+
+                   </div>
+
+                   <div class="con2">
+                       <div class="mail">
+                           <h3>Par mail : <a href="mailto:gravure@eltriofactory.com">gravure@eltriofactory.com</a> </h3>
+                           <p>
+                               <br>N'hésitez pas à nous envoyer des visuels de vos idées en pièce jointes !
+                           </p>
+                       </div>
+                       <div class="tel">
+                           <h3>Par téléphone : <a href="tel:+32472096563"> +32 472 09 65 63</a> </h3>
+                           <p>
+                               <br> Pour nous expliquer de vive voix votre projet !
+
+                           </p>
+                       </div>
+                   </div>
+
+               </main>
+            </div>
+
+
+            <footer>
+                <div class="reseaux">
+                    <p><h3>Nos Réseaux: </h3><br><br></p>
+                    <p>
+                        Facebook : <a href="https://www.facebook.com/el.trio.gravure" target="_blank" >ici</a> <br>
+                        Instagram : <a href="https://www.instagram.com/el_trio_gravure/" target="_blank" >ici</a>
+                    </p>
+            </div>
+        </footer>
+        </div>
+    </body>
 </html>
