--- a/El Trio Gravure/Nos Modèles/Nos Modèles.html
+++ b/El Trio Gravure/Nos Modèles/Nos Modèles.html
@@ -1,10 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Nos Modèles</title>
+        <link rel="icon" href="../Ressources/Logo%20avec%20fond%20en%20cercle.png" type="image/png">
+        <link rel="stylesheet" href="Nos%20Modèles.css">
+        <link rel="stylesheet" href="../normalize.css">
+    </head>
 
-</body>
+    <body>
+        <div class="all"></div>
+           <header>
+               <h1>Nos Modèles</h1>
+           </header>
+            <div class="inter">
+                <nav>
+                    <p><h3>Menu : </h3><br><br></p>
+                    <ul>
+                        <li> <a href="../Accueil/Accueil.html">Accueil</a></li>
+                        <br>
+                        <li><a href="../Nos%20Modèles/Nos%20Modèles.html">Nos Modèles</a></li>
+                        <br>
+                        <li> <a href="../Nos%20Projets/Nos%20Projets.html">Nos Projets</a></li>
+                        <br>
+                        <li> <a href="../La%20Creation/La%20Création.html">La Création</a></li>
+                        <br>
+                        <li> <a href="../Contact/Contact.html">Contact</a></li>
+                        <br>
+                    </ul>
+                </nav>
+
+               <main>
+                   <div class="mod0">
+                       <h2>Blalbla</h2>
+                       <p>
+                           Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id purus. In mollis, elit quis interdum vestibulum, nisi tortor eleifend ex, et vehicula elit tortor sed tellus. Sed vitae arcu rhoncus, semper massa non, varius justo. Sed rutrum commodo porta. Integer aliquet ex a lacinia aliquet.
+                           Sed eu urna faucibus, ultrices odio quis, porttitor arcu. Etiam augue turpis, luctus eget feugiat posuere, tempor a neque. Cras congue lorem bibendum ultricies vulputate. Aliquam erat volutpat. Morbi euismod elit velit, id faucibus dolor posuere quis. Duis mollis dignissim tellus, eu blandit neque finibus in. Maecenas ut ipsum risus. Proin vitae vehicula augue.
+                       </p>
+                   </div>
+
+                   <div class="li1">
+
+                       <div class="mod1">
+                           <div class="imgmod1">
+                               <img src="https://static.wixstatic.com/media/a3b586_10f948971ac646829895882ce7acc49c~mv2.png" alt="???" class="pic1">
+                           </div>
+
+                           <div class="txtmod1">
+                               <h3>"Le Gorille"</h3>
+                               <h4>
+                                   <br><br>Prix : <br><br>
+                                   - 20€ avec pied gravé avec le texte de votre choix. <br><br>
+                                   - 15€ sans pied <br><br>
+                               </h4>
+                               <p>
+                                   Silouhette de Gorille sur son support. <br><br>
+                                   Dimension : 18cm x 15cm <br> <br>
+                                   💡D'autres dimensions sont possibles en fonction de
+                                   notre grille tarifaire.
+                               </p>
+                           </div>
+                       </div>
+
+                       <div class="mod2">
+                           <div class="imgmod2">
+                               <img src="https://static.wixstatic.com/media/a3b586_10f948971ac646829895882ce7acc49c~mv2.png" alt="???" class="pic2">
+                           </div>
+
+                           <div class="txtmod2">
+                               <h3>"Le Gorille"</h3>
+                               <h4>
+                                   <br><br>Prix : <br><br>
+                                   - 20€ avec pied gravé avec le texte de votre choix. <br><br>
+                                   - 15€ sans pied <br><br>
+                               </h4>
+                               <p>
+                                   Silouhette de Gorille sur son support. <br><br>
+                                   Dimension : 18cm x 15cm <br> <br>
+                                   💡D'autres dimensions sont possibles en fonction de
+                                   notre grille tarifaire.
+                               </p>
+                           </div>
+                       </div>
+                   </div>
+
+                   <div class="li2">
+
+                       <div class="mod3">
+                           <div class="imgmod3">
+                               <img src="https://static.wixstatic.com/media/a3b586_10f948971ac646829895882ce7acc49c~mv2.png" alt="???" class="pic3">
+                           </div>
+
+                           <div class="txtmod3">
+                               <h3>"Le Gorille"</h3>
+                               <h4>
+                                   <br><br>Prix : <br><br>
+                                   - 20€ avec pied gravé avec le texte de votre choix. <br><br>
+                                   - 15€ sans pied <br><br>
+                               </h4>
+                               <p>
+                                   Silouhette de Gorille sur son support. <br><br>
+                                   Dimension : 18cm x 15cm <br> <br>
+                                   💡D'autres dimensions sont possibles en fonction de
+                                   notre grille tarifaire.
+                               </p>
+                           </div>
+                       </div>
+
+                       <div class="mod4">
+                           <div class="imgmod4">
+                               <img src="https://static.wixstatic.com/media/a3b586_10f948971ac646829895882ce7acc49c~mv2.png" alt="???" class="pic4">
+                           </div>
+
+                           <div class="txtmod4">
+                               <h3>"Le Gorille"</h3>
+                               <h4>
+                                   <br><br>Prix : <br><br>
+                                   - 20€ avec pied gravé avec le texte de votre choix. <br><br>
+                                   - 15€ sans pied <br><br>
+                               </h4>
+                               <p>
+                                   Silouhette de Gorille sur son support. <br><br>
+                                   Dimension : 18cm x 15cm <br> <br>
+                                   💡D'autres dimensions sont possibles en fonction de
+                                   notre grille tarifaire.
+                               </p>
+                           </div>
+                       </div>
+                   </div>
+
+                   <div class="li3">
+
+                       <div class="mod5">
+                           <div class="imgmod5">
+                               <img src="https://static.wixstatic.com/media/a3b586_10f948971ac646829895882ce7acc49c~mv2.png" alt="???" class="pic5">
+                           </div>
+
+                           <div class="txtmod5">
+                               <h3>"Le Gorille"</h3>
+                               <h4>
+                                   <br><br>Prix : <br><br>
+                                   - 20€ avec pied gravé avec le texte de votre choix. <br><br>
+                                   - 15€ sans pied <br><br>
+                               </h4>
+                               <p>
+                                   Silouhette de Gorille sur son support. <br><br>
+                                   Dimension : 18cm x 15cm <br> <br>
+                                   💡D'autres dimensions sont possibles en fonction de
+                                   notre grille tarifaire.
+                               </p>
+                           </div>
+                       </div>
+
+                       <div class="mod6">
+                           <div class="imgmod6">
+                               <img src="https://static.wixstatic.com/media/a3b586_10f948971ac646829895882ce7acc49c~mv2.png" alt="???" class="pic6">
+                           </div>
+
+                           <div class="txtmod6">
+                               <h3>"Le Gorille"</h3>
+                               <h4>
+                                   <br><br>Prix : <br><br>
+                                   - 20€ avec pied gravé avec le texte de votre choix. <br><br>
+                                   - 15€ sans pied <br><br>
+                               </h4>
+                               <p>
+                                   Silouhette de Gorille sur son support. <br><br>
+                                   Dimension : 18cm x 15cm <br> <br>
+                                   💡D'autres dimensions sont possibles en fonction de
+                                   notre grille tarifaire.
+                               </p>
+                           </div>
+                       </div>
+                   </div>
+               </main>
+            </div>
+
+
+            <footer>
+                <div class="telmail">
+                   <p> <h3>Contactez-Nous: </h3><br><br></p>
+                    <p>
+                        Mail : <a href="mailto:gravure@eltriofatory.com">gravure@eltriofatory.com</a> <br>
+                        Téléphone : <a href="tel:+32472096563">+32 472 09 65 63</a>
+                    </p>
+                </div>
+                <div class="reseaux">
+                    <p><h3>Nos Réseaux: </h3><br><br></p>
+                    <p>
+                        Facebook : <a href="https://www.facebook.com/el.trio.gravure" target="_blank" >ici</a> <br>
+                        Instagram : <a href="https://www.instagram.com/el_trio_gravure/" target="_blank" >ici</a>
+                    </p>
+            </div>
+        </footer>
+        </div>
+    </body>
 </html>
