--- a/El Trio Gravure/La Creation/La Création.html
+++ b/El Trio Gravure/La Creation/La Création.html
@@ -38,49 +38,51 @@
                        <iframe width="560" height="315" src="../Ressources/HD%20Epic%20Sax%20Gandalf.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="vidgandalf"></iframe>
                    </div>
 
+                   <div class="space1"></div>
+
                    <div class="step">
-                        <ol>
+                        <ul>
                             <li>
-                                <h3>: La prise de contact</h3><br>
+                                <h3>1 : La prise de contact</h3><br>
                                 <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
                                     <br> <br></p>
                             </li>
-                            <li> <h3>: La modélisation du projet V1</h3><br>
+                            <li> <h3>2 : La modélisation du projet V1</h3><br>
                                 <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
                                     <br> <br></p>
                             </li>
-                            <li> <h3>: L'Échange sur le projet V1</h3><br>
+                            <li> <h3>3 : L'Échange sur le projet V1</h3><br>
                                 <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
                                     <br> <br></p>
                             </li>
-                            <li> <h3>: Ajustement et remodélisation du projet pour la V_final</h3><br>
+                            <li> <h3>4 : Ajustement et remodélisation du projet pour la V_final</h3><br>
                                 <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
                                     <br> <br></p>
                             </li>
-                            <li> <h3>: Découpe et gravure laser</h3><br>
+                            <li> <h3>5 : Découpe et gravure laser</h3><br>
                                 <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
                                     <br> <br></p>
                             </li>
-                            <li> <h3>: Nettoyage</h3><br>
+                            <li> <h3>6 : Nettoyage</h3><br>
                                 <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
                                     <br> <br></p>
                             </li>
-                            <li> <h3>: Peinture</h3><br>
+                            <li> <h3>7 : Peinture</h3><br>
                                 <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
                                     <br> <br></p>
                             </li>
-                            <li> <h3>: Asssemblage</h3><br>
+                            <li> <h3>8 : Asssemblage</h3><br>
                                 <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
                                     <br> <br></p>
                             </li>
-                            <li> <h3>: livraison</h3><br>
+                            <li> <h3>9 : livraison</h3><br>
                                 <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
                                     <br> <br></p>
                             </li>
-                        </ol>
+                        </ul>
                    </div>
 
-                   </main>
+               </main>
             </div>
 
             <footer>
