--- a/El Trio Gravure/Contact/Contact.html
+++ b/El Trio Gravure/Contact/Contact.html
@@ -15,7 +15,7 @@
            </header>
             <div class="inter">
                 <nav>
-                    <p><h3>Menu : </h3><br><br></p>
+                    <p><h3>Menu</h3><br><br></p>
                     <ul>
                         <li> <a href="../Accueil/Accueil.html">Accueil</a></li>
                         <br>
@@ -67,12 +67,12 @@
 
             <footer>
                 <div class="reseaux">
-                    <p><h3>Nos Réseaux: </h3><br><br></p>
+                    <h3>Nos Réseaux :</h3>
                     <p>
-                        Facebook : <a href="https://www.facebook.com/el.trio.gravure" target="_blank" >ici</a> <br>
-                        Instagram : <a href="https://www.instagram.com/el_trio_gravure/" target="_blank" >ici</a>
+                        <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="../Ressources/FB1.png" alt="Facebook" class="resicon"></a>
+                        <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="../Ressources/IN1.png" alt="Instagram" class="resicon"></a>
                     </p>
-            </div>
+                </div>
         </footer>
         </div>
     </body>
