Update "La Creation" (step dynamique)

--- a/El Trio Gravure/La Creation/La Création.html
+++ b/El Trio Gravure/La Creation/La Création.html
@@ -43,42 +43,80 @@
                    <div class="step">
                         <ul>
                             <li>
-                                <h3>1 : La prise de contact</h3><br>
-                                <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
-                                    <br> <br></p>
+                                <input type="checkbox" id="toggle-1" class="toggle-checkbox">
+                                <label for="toggle-1" class="toggle-title"><h3>1 : La Prise de Contact</h3></label>
+                                <p
+                                        class="toggle-content">Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
+                                    <br><br></p>
                             </li>
-                            <li> <h3>2 : La modélisation du projet V1</h3><br>
-                                <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
-                                    <br> <br></p>
+
+                            <li>
+                                <input type="checkbox" id="toggle-2" class="toggle-checkbox">
+                                <label for="toggle-2" class="toggle-title"><h3>2 : La modélisation du projet V1</h3></label>
+                                <p
+                                        class="toggle-content">Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
+                                    <br><br></p>
                             </li>
-                            <li> <h3>3 : L'Échange sur le projet V1</h3><br>
-                                <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
-                                    <br> <br></p>
+
+                            <li>
+                                <input type="checkbox" id="toggle-3" class="toggle-checkbox">
+                                <label for="toggle-3" class="toggle-title"><h3>3 : L'Échange sur le projet V1</h3></label>
+                                <p
+                                        class="toggle-content">Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
+                                    <br><br></p>
                             </li>
-                            <li> <h3>4 : Ajustement et remodélisation du projet pour la V_final</h3><br>
-                                <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
-                                    <br> <br></p>
+
+                            <li>
+                                <input type="checkbox" id="toggle-4" class="toggle-checkbox">
+                                <label for="toggle-4" class="toggle-title"><h3>4 : Ajustement et remodélisation du projet pour la V_final</h3></label>
+                                <p
+                                        class="toggle-content">Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
+                                    <br><br></p>
                             </li>
-                            <li> <h3>5 : Découpe et gravure laser</h3><br>
-                                <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
-                                    <br> <br></p>
+
+                            <li>
+                                <input type="checkbox" id="toggle-5" class="toggle-checkbox">
+                                <label for="toggle-5" class="toggle-title"><h3>5 : Découpe et gravure laser</h3></label>
+                                <p
+                                        class="toggle-content">Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
+                                    <br><br></p>
                             </li>
-                            <li> <h3>6 : Nettoyage</h3><br>
-                                <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
-                                    <br> <br></p>
+
+                            <li>
+                                <input type="checkbox" id="toggle-6" class="toggle-checkbox">
+                                <label for="toggle-6" class="toggle-title"><h3>6 : Nettoyage</h3></label>
+                                <p
+                                        class="toggle-content">Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
+                                    <br><br></p>
                             </li>
-                            <li> <h3>7 : Peinture</h3><br>
-                                <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
-                                    <br> <br></p>
+
+                            <li>
+                                <input type="checkbox" id="toggle-7" class="toggle-checkbox">
+                                <label for="toggle-7" class="toggle-title"><h3>7 : Peinture</h3></label>
+                                <p
+                                        class="toggle-content">Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
+                                    <br><br></p>
                             </li>
-                            <li> <h3>8 : Asssemblage</h3><br>
-                                <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
-                                    <br> <br></p>
+
+                            <li>
+                                <input type="checkbox" id="toggle-8" class="toggle-checkbox">
+                                <label for="toggle-8" class="toggle-title"><h3>8 : Asssemblage</h3></label>
+                                <p
+                                        class="toggle-content">Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
+                                    <br><br></p>
                             </li>
-                            <li> <h3>9 : livraison</h3><br>
-                                <p>Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
-                                    <br> <br></p>
+
+                            <li>
+                                <input type="checkbox" id="toggle-9" class="toggle-checkbox">
+                                <label for="toggle-9" class="toggle-title"><h3>9 : livraison</h3></label>
+                                <p
+                                        class="toggle-content">Lorem pureipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel nisl imperdiet, dictum elit a, malesuada metus. Quisque vestibulum massa enim, et convallis enim porta sit amet. Etiam placerat nec justo tincidunt egestas. Nam nec varius mauris. Pellentesque condimentum enim mauris, at varius erat elementum vel. Phasellus quis tempus odio. Sed ullamcorper elit massa, quis mattis leo pulvinar nec. Integer nulla orci, sollicitudin ac faucibus sit amet, sagittis id
+                                    <br><br></p>
                             </li>
+
+
+
+
                         </ul>
                    </div>
 
