--- a/El Trio Gravure/Accueil/Accueil.html
+++ b/El Trio Gravure/Accueil/Accueil.html
@@ -36,7 +36,7 @@
                    </div>
 
                    <div class="logo">
-                        <img src="../Ressources/Logo%20avec%20fond%20en%20cercle.png" alt="Logo El Trio Gravure"class="logoimg">
+                        <img src="../Ressources/Logo%20Gravure%20Typo%20Blanche%20sans%20fond%20.png" alt="Logo El Trio Gravure"class="logoimg">
                    </div>
 
                    <div class="about0">
@@ -118,8 +118,8 @@
                 <div class="reseaux">
                     <h3>Nos Réseaux :</h3>
                     <p>
-                        <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="../Ressources/FB1.png" alt="Facebook" class="resicon"></a>
-                        <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="../Ressources/IN1.png" alt="Instagram" class="resicon"></a>
+                        <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="../Ressources/FB2.png" alt="Facebook" class="resicon"></a>
+                        <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="../Ressources/IN2.png" alt="Instagram" class="resicon"></a>
                     </p>
                 </div>
         </footer>
