--- a/El Trio Gravure/Nos Modèles/Nos Modèles.html
+++ b/El Trio Gravure/Nos Modèles/Nos Modèles.html
@@ -177,22 +177,22 @@
             </div>
 
 
-            <footer>
-                <div class="telmail">
-                   <p> <h3>Contactez-Nous: </h3><br><br></p>
-                    <p>
-                        Mail : <a href="mailto:gravure@eltriofatory.com">gravure@eltriofatory.com</a> <br>
-                        Téléphone : <a href="tel:+32472096563">+32 472 09 65 63</a>
-                    </p>
-                </div>
-                <div class="reseaux">
-                    <h3>Nos Réseaux :</h3>
-                    <p>
-                        <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="../Ressources/FB2.png" alt="Facebook" class="resicon"></a>
-                        <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="../Ressources/IN2.png" alt="Instagram" class="resicon"></a>
-                    </p>
-                </div>
-        </footer>
+                <footer>
+                    <div class="telmail">
+                        <p> <h3>Contactez-Nous: </h3><br><br></p>
+                        <p>
+                            Mail : <a href="mailto:gravure@eltriofatory.com">gravure@eltriofatory.com</a> <br><br>
+                            Téléphone : <a href="tel:+32472096563">+32 472 09 65 63</a>
+                        </p>
+                    </div>
+                    <div class="reseaux">
+                        <h3>Nos Réseaux :<br><br></h3>
+                        <p>
+                            <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="../Ressources/FB2.png" alt="Facebook" class="resicon"></a>
+                            <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="../Ressources/IN2.png" alt="Instagram" class="resicon"></a>
+                        </p>
+                    </div>
+                </footer>
         </div>
     </body>
 </html>
