--- a/test.html
+++ b/test.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Le Sommeil des Pandas</title>
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
-<div class="container">
-    <input type="checkbox" id="toggle-1" class="toggle-checkbox">
-    <label for="toggle-1" class="toggle-title">Titre 1</label>
-    <p class="toggle-content">Ceci est le contenu du paragraphe 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-    <input type="checkbox" id="toggle-2" class="toggle-checkbox">
-    <label for="toggle-2" class="toggle-title">Titre 2</label>
-    <p class="toggle-content">Ceci est le contenu du paragraphe 2. Quisque accumsan lacus vel facilisis volutpat.</p>
-
-    <input type="checkbox" id="toggle-3" class="toggle-checkbox">
-    <label for="toggle-3" class="toggle-title">Titre 3</label>
-    <p class="toggle-content">Ceci est le contenu du paragraphe 3. Nulla facilisi. Phasellus vel turpis tincidunt, aliquet erat a, cursus odio.</p>
-</div>
+<header>
+    <h1>Le Sommeil des Pandas</h1>
+    <nav>
+        <ul>
+            <li><a href="#home">Accueil</a></li>
+            <li><a href="#about">À propos</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <section id="about">
+        <h2>À propos du sommeil des pandas</h2>
+        <p>Les pandas géants sont connus pour leur sommeil prolongé. Ils peuvent dormir entre 10 et 16 heures par jour. Leur régime alimentaire, principalement composé de bambou, est pauvre en nutriments, ce qui signifie qu'ils doivent économiser leur énergie en dormant beaucoup.</p>
+        <img src="panda-sleeping.jpg" alt="Panda dormant">
+    </section>
+</main>
+<footer>
+    <p>&copy; 2024 Le Sommeil des Pandas. Tous droits réservés.</p>
+</footer>
 </body>
 </html>
