Update change Background

--- a/El Trio Gravure/Nos Modèles/Nos Modèles.html
+++ b/El Trio Gravure/Nos Modèles/Nos Modèles.html
@@ -43,7 +43,12 @@
 
                        <div class="mod1">
                            <div class="imgmod1">
-                               <img src="https://static.wixstatic.com/media/a3b586_10f948971ac646829895882ce7acc49c~mv2.png" alt="???" class="pic1">
+                               <img src="../Ressources/gorille.JPG" alt="Photo de gorille réalisé en découpe laser." onclick="document.getElementById('audioPlayer').play();" class="pic1">
+
+                               <audio id="audioPlayer" preload="auto">
+                                   <source src="../Ressources/Georges%2520Brassens%2520-%2520Le%2520gorille.mp3" type="audio/mp3">
+                               </audio>
+
                            </div>
 
                            <div class="txtmod1">
