Update change Background

--- a/El Trio Gravure/Nos Modèles/Nos Modèles.html
+++ b/El Trio Gravure/Nos Modèles/Nos Modèles.html
@@ -32,7 +32,7 @@
 
                <main>
                    <div class="mod0">
-                       <h2>Retrouvez ici notre catalogue !</h2>
+                       <h2>Retrouvez ici notre catalogue :</h2>
                        <p>
 
                            Sur cette page, découvrez nos modèles de découpe et gravures laser finis, idéaux pour la décoration. Nous proposons une sélection variée de pièces prêtes à l'emploi, disponibles en différentes tailles et couleurs. Que ce soit pour ajouter une touche artistique à votre intérieur ou pour offrir en cadeau, nos modèles répondent à divers besoins esthétiques.
