--- a/El Trio Gravure/Contact/Contact.html
+++ b/El Trio Gravure/Contact/Contact.html
@@ -37,7 +37,7 @@
 
                    <div class="Con1">
                        <p>
-                           Un Projet, une idée... n'hésitez pas à nous contacter :
+                           Un projet, une idée... n'hésitez pas à nous contacter :
                        </p>
                    </div>
 
